Fixed naming of package asmdefs

--- a/Scripts/com.bhik95.region-system.asmdef
+++ b/Scripts/com.bhik95.region-system.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "storie.utility2",
+    "name": "com.bhik95.region-system",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
